# snekmate

./: .editorconfig  .eslintignore  .eslintrc.js  .gas-snapshot  .gas-snapshot-venom  .gitignore  .gitmodules  .prettierignore  .prettierrc.yml  .solhint.json  .solhintignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  FUNDING.json  GUIDELINES.md  MANIFEST.in  README.md  SECURITY.md  ape-config.yaml  eslint.config.js  foundry.toml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml  remappings.txt  renovate.json
.github/: FUNDING.yml  Sponsor FUNDING.yml  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: checks.yml  codeql.yml  halmos-venom.yml  halmos.yml  lint.yml  publish-npm.yml  publish-pypi.yml  publish-test-pypi.yml  test-contracts-venom.yml  test-contracts.yml  venom-halmos.yml  venom-test-contracts.yml
audits/: AUDITS.md  README.md
lib/utils/: VyperDeployer.sol  compile.py
scripts/: build.py  compile.py  generate_gas_snapshot.sh  insert_venom_pragma.py
src/: SimpleStore.vy
src/auth/: AccessControl.vy  Ownable.vy  Ownable2Step.vy
src/auth/interfaces/: IAccessControl.vy  IAccessControl.vyi
src/extensions/: ERC2981.vy  ERC4626.vy
src/extensions/interfaces/: IERC2981.vy
src/governance/: TimelockController.vy
src/mixins/: ERC4626.vy
src/snekmate/auth/: AccessControl.vy  (+5 more)
src/tokens/: ERC1155.vy  ERC20.vy  ERC721.vy
src/utils/: Base64.vy  BatchDistributor.vy  Create2Address.vy  CreateAddress.vy  ECDSA.vy  EIP712.vy  EIP712DomainSeparator.vy  Math.vy  MerkleProofVerification.vy  Multicall.vy  SignatureChecker.vy
test/: echidna.yaml  halmos.toml
test/auth/: AccessControl.t.sol  Ownable.t.sol  Ownable2Step.t.sol
test/extensions/: ERC2981.t.sol  ERC4626.t.sol
test/governance/: TimelockController.t.sol
test/tokens/: ERC1155.t.sol  ERC20.t.sol  ERC721.t.sol
test/utils/: Base64.t.sol  BatchDistributor.sol  BatchDistributor.t.sol  BlockHash.t.sol  CircuitBreaker.t.sol  Create.t.sol  Create2.t.sol  Create2Address.t.sol  Create3.t.sol  CreateAddress.t.sol  ECDSA.t.sol  EIP712.t.sol  EIP712DomainSeparator.t.sol  EIP7702Utils.t.sol  IECDSA.sol  Math.t.sol  MathWadCbrtPrecision.t.sol  MerkleProofVerification.t.sol  MessageHashUtils.t.sol  Multicall.sol  Multicall.t.sol  P256.t.sol  Pausable.t.sol  SignatureChecker.t.sol
(+199 files in other folders)
