[project]
name = "snekmate"
version = "0.0.3"
description = "State-of-the-art, highly opinionated, hyper-optimised, and secure Vyper smart contract building blocks."
readme = {file = "README.md", content-type = "text/markdown"}
requires-python = ">=3.10"
license = {text = "AGPL-3.0-only License"}
keywords = ["security", "library", "ethereum", "smart-contracts", "evm", "vyper", "vyper-contracts"]
authors = [
  {name = "Pascal Marco Caversaccio", email = "pascal.caversaccio@hotmail.ch"},
]
maintainers = [
  {name = "Pascal Marco Caversaccio", email = "pascal.caversaccio@hotmail.ch"},
]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "License :: OSI Approved :: GNU Affero General Public License v3",
  "Operating System :: POSIX :: Linux",
  "Operating System :: Microsoft :: Windows",
  "Operating System :: MacOS",
]

[project.urls]
Homepage = "https://github.com/pcaversaccio/snekmate#readme"
GitHub = "https://github.com/pcaversaccio/snekmate"
Changelog = "https://github.com/pcaversaccio/snekmate/blob/main/CHANGELOG.md"
