[project]
name = "snekmate"
version = "0.1.2"
description = "State-of-the-art, highly opinionated, hyper-optimised, and secure ðŸVyper smart contract building blocks."
readme = { file = "README.md", content-type = "text/markdown" }
requires-python = ">=3.10"
license = { text = "AGPL-3.0-only License" }
keywords = [
  "security",
  "library",
  "ethereum",
  "smart-contracts",
  "evm",
  "vyper",
  "vyper-contracts",
]
authors = [
  { name = "Pascal Marco Caversaccio", email = "pascal.caversaccio@hotmail.ch" },
]
maintainers = [
  { name = "Pascal Marco Caversaccio", email = "pascal.caversaccio@hotmail.ch" },
]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: GNU Affero General Public License v3",
  "Natural Language :: English",
  "Operating System :: MacOS",
  "Operating System :: Microsoft :: Windows",
  "Operating System :: POSIX :: Linux",
  "Topic :: Software Development :: Libraries",
]

[project.urls]
Homepage = "https://github.com/pcaversaccio/snekmate#readme"
GitHub = "https://github.com/pcaversaccio/snekmate"
Changelog = "https://github.com/pcaversaccio/snekmate/blob/main/CHANGELOG.md"
